--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #101823;
+    box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
 }
 .header .leftBox {
     height: 100%;
@@ -20,7 +21,7 @@
     padding-left: 0.2rem;
 }
 .header .leftBox .imgBox img{
-    width: 80%;
+    width: 100%;
     height: auto;
 }
 .header .leftBox .inputBox{
@@ -78,4 +79,77 @@
     font-size: 0.18rem;
     margin-left: 0.1rem;
     cursor: pointer;
+}
+
+/*
+    contentBox
+*/
+.contentBox{
+    width: 100%;
+    height: calc(100% - 1.2rem);
+    background-color: #131C2b;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/*
+    数据包盒子样式
+*/
+.contentBox .dataBox{
+    width:50%;
+    height: 100%;
+    padding:0.1rem  0.2rem;
+    border:1px solid red;
+}
+.contentBox .dataBox .navBox{
+    width: 100%;
+    height: 0.3rem;
+    line-height: 0.3rem;
+}
+.contentBox .dataBox .navBox span{
+    width: 0.8rem;
+    display: inline-block;
+    height: 100%;
+    text-align: center;
+    font-family: MicrosoftYaHei-Bold;
+    font-size: 0.18rem;
+    font-weight: normal;
+    font-stretch: normal;
+    line-height: 0.27rem;
+    letter-spacing: 0rem;
+    margin-right: 0.1rem;
+    color: #919da8;
+    cursor: pointer;
+}
+.contentBox .dataBox .navBox span.active{
+    color: #0492f2;
+    border-bottom: 1px solid #0492f2;
+}
+
+.contentBox .dataBox .navBox select{
+    outline: none;
+    background: none;
+    width: 1rem;
+    color: #919da8;
+    font-size: 0.16rem;
+    text-align: center;
+}
+.contentBox .dataBox .navBox select > option{
+    background-color: #131C2b;
+    color: #919da8;
+    text-align: center;
+}
+.minBox{
+    width: 100%;
+    height: calc(100% - 0.3rem);
+    background-color: #1c2735;
+}
+
+/*
+   详情盒子盒子样式
+*/
+.contentBox .detailBox{
+    width:50%;
+    height: 100%;
+    border:1px solid red;
 }
