--- a/css/basicStyle.css
+++ b/css/basicStyle.css
@@ -18,6 +18,10 @@ body,html{
 ul {
     list-style: none;
 }
+#app{
+    width: 100%;
+    height: 100%;
+}
 button{
     text-decoration: none;
     outline: none;
