--- a/css/basicStyle.css
+++ b/css/basicStyle.css
@@ -1,27 +1,4 @@
 /*公共样式*/
-
-
-::-webkit-scrollbar {
-    /*滚动条整体样式*/
-    width: 0px;
-    /*高宽分别对应横竖滚动条的尺寸*/
-    height: 5px;
-}
-
-::-webkit-scrollbar-thumb {
-    /*滚动条里面小方块*/
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
-    background: rgba(0, 0, 0, 0.2);
-}
-
-::-webkit-scrollbar-track {
-    /*滚动条里面轨道*/
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.05);
-    border-radius: 0;
-    background: rgba(0, 0, 0, 0.01);
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -32,34 +9,24 @@
     text-decoration: none;
     font-max-size: 20px;
 }
-
-html {
+html{
+    height: 100vh;
     font-size: calc(100vw * 100 / 1920);
 }
-
-body,
-html {
-    height: 100%;
+body,html{
+    height: 100vh;
 }
-
 ul {
     list-style: none;
 }
-
-#app {
-    width: 100%;
-    height: 100%;
-}
-
-button {
+/*#app{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+button{
     text-decoration: none;
     outline: none;
     border: none;
     cursor: pointer;
 }
 
-.textHiden {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
