--- a/css/index.css
+++ b/css/index.css
@@ -90,14 +90,13 @@
     background-color: #131C2b;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 /*
     数据包盒子样式
 */
 .contentBox .dataBox{
     width:50%;
-    height: 100%;
+    min-height: 100%;
     padding:0.1rem  0.2rem;
 }
 .contentBox .dataBox .navBox{
@@ -474,10 +473,10 @@
 .showBox .btns button:nth-child(2){
     background-color: #0492F2;
 }
-.showBox .btns button:nth-child(3){
+.showBox .btns button:nth-child(4){
     background-color: #35D8D4;
 }
-.showBox .btns button:nth-child(4){
+.showBox .btns button:nth-child(3){
     background-color: #0670EF;
 }
 
@@ -673,7 +672,7 @@
     left: 50%;
     width: 10rem;
 	height: 3rem;
-    background-color: rgba(27,38,51);
+    background-color: rgba(27,38,51,1);
     transform: translate(-5rem,-1.5rem);
     min-height: 0;
 }
