--- a/css/basicStyle.css
+++ b/css/basicStyle.css
@@ -36,7 +36,7 @@ html{
     font-size: calc(100vw * 100 / 1920);
 }
 body,html{
-    /*height: 100vh;*/
+    height: 100vh;
 }
 ul {
     list-style: none;
