--- a/css/basicStyle.css
+++ b/css/basicStyle.css
@@ -1,5 +1,7 @@
 /*公共样式*/
-
+span{
+    white-space: nowrap;
+}
 
 ::-webkit-scrollbar {
     /*滚动条整体样式*/
@@ -36,7 +38,7 @@ html{
     font-size: calc(100vw * 100 / 1920);
 }
 body,html{
-    height: 100vh;
+    height: 1080px;
 }
 ul {
     list-style: none;
