--- a/css/index.css
+++ b/css/index.css
@@ -353,7 +353,7 @@
 }
 .detailBox .tableBox .listItemBox{
     width: 100%;
-    height:1.5rem;
+    max-height:1.5rem;
     overflow-x: hidden;
 }
 
@@ -372,7 +372,7 @@
     border-bottom: 1px solid #3D5466;
 }
 
-.detailBox .tableBox .tableItem span{
+.detailBox .tableBox .listItemBox .tableItem>span{
     text-align: left;
     overflow: hidden;
     white-space: nowrap;
@@ -445,7 +445,7 @@
 }
 .detailBox .tableBox .listItemBox01{
     width: 100%;
-    height:0.91rem;
+    max-height:0.91rem;
     overflow-x: hidden;
 }
 
@@ -454,7 +454,7 @@
 }
 
 .showBox .btns{
-    margin-top: 0.4rem;
+    margin-top: 0.8rem;
     width: 100%;
     display: flex;
     justify-content: center;
