--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,7 @@
 }
 .contentBox .dataBox .navBox{
     width: 100%;
-    height: 0.3rem;
+    /*  height: 0.3rem; */
     line-height: 0.3rem;
 }
 .contentBox .dataBox .navBox span{
@@ -124,7 +124,7 @@
 .contentBox .dataBox .navBox select{
     outline: none;
     background: none;
-    width: 1rem;
+    min-width: 60px;
     color: #919da8;
     font-size: 0.16rem;
     text-align: center;
@@ -144,7 +144,7 @@
 .minBox .checkBox{
     display: inline-block;
     width: 100%;
-    height: 0.3rem;
+    /* height: 0.3rem; */
     line-height: 0.3rem;
     border-bottom: 1px solid #919da8;
 }
@@ -260,7 +260,7 @@
 }
 .listBox .itemBox .btns button{
     width: 0.61rem;
-    height: 0.24rem;
+    /* height: 0.24rem; */
     margin: 0 0.02rem;
     text-align: center;
     border-radius: 0.03rem;
